--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "victory": "^35.6.0"
   },
   "scripts": {
-    "start": "PORT=3300 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts --max_old_space_size=4096 build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
